--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@ h2 {
 .navbar {
   background-color: black;
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   right: 0;
   width: 100%;
@@ -258,7 +258,7 @@ h2 {
 .nav-text a {
   text-decoration: none;
   color: white;
-  font-size: 16px;
+  font-size: 13px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -299,6 +299,10 @@ span {
   margin-left: 16px
 }
 
+li {
+  list-style: none
+}
+
 @keyframes popup {
   0%   { transform: scale(1,1) }
   10%  { transform: scale(1.1,1.1) }
@@ -308,3 +312,9 @@ span {
   64%  { transform: scale(1,1) }
   100% { transform: scale(1,1) }
 }  
+
+@media screen and (min-width: 40em) {
+  .nav-text a {
+    font-size: 16px
+  }
+}
