--- a/src/App.css
+++ b/src/App.css
@@ -303,6 +303,11 @@ li {
   list-style: none
 }
 
+.info {
+  padding-top: 5em;
+  width: 40%
+}
+
 @keyframes popup {
   0%   { transform: scale(1,1) }
   10%  { transform: scale(1.1,1.1) }
