--- a/src/App.css
+++ b/src/App.css
@@ -214,6 +214,12 @@ h2 {
   align-items: flex-start !important;
 }
 
+.nav-hidden {
+  position: absolute;
+  display: none !important;
+  visibility: hidden !important;
+}
+
 .nav-logo {
   display: flex;
   margin: 0 auto;
