--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+}
 
 #root {
   text-align: center;
@@ -6,7 +15,6 @@
   width: 100vw;
   min-height: 100vh;
   overflow: hidden;
-  /* background: linear-gradient(#fff, #999); */
   background: linear-gradient( #cc693c, rgb(255, 255, 255));
 }
 
@@ -22,6 +30,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: auto;
 }
 
 .row {
@@ -70,6 +79,12 @@ h2 {
 .swipe {
   position: absolute;
   display: flex;
+}
+
+.swiper {
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .cardContainer {
@@ -210,7 +225,7 @@ h2 {
   right: 0;
   width: 100%;
   display: flex;
-  height: 80px;
+  height: 40px;
   align-items: flex-start !important;
 }
 
@@ -310,9 +325,25 @@ li {
 }
 
 .info {
-  padding-top: 5em;
-  width: 40%
+  top: 5em;
+  position: absolute;
+  overflow-y: auto !important;
+  height: 100%;
+  width: 80%;
 }
+
+
+/* .info:first-child {
+  justify-content: flex-start !important;
+  padding-top: 5em !important;
+} */
+
+/* .info p {
+  justify-content: flex-start;
+  top: 1em;
+  position: absolute;
+} */
+
 
 @keyframes popup {
   0%   { transform: scale(1,1) }
