--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+
+.no-scroll {
   overflow: hidden;
 }
 
@@ -14,9 +18,10 @@ body {
   justify-content: center;
   width: 100vw;
   min-height: 100vh;
-  overflow: hidden;
-  background: linear-gradient( #cc693c, rgb(255, 255, 255));
+  background-image: linear-gradient(to top, rgb(255, 166, 43), rgb(137, 255, 249), rgb(137, 255, 249), rgb(137, 255, 249));
+  
 }
+
 
 #root>div {
   display: flex;
@@ -118,10 +123,20 @@ h2 {
 
 }
 
+.swipe-menu {
+  display: flex;
+  flex-direction: column;
+}
+
+.group-menu li{
+  margin-left: 0;
+}
+
 .card h3 {
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
   margin: 10px;
+  height: 60px;
   /*the text-shadow property below provides a border around the card name text*/
   text-shadow: 1px 1px 0 #000,
   -1px 1px 0 #000,
@@ -147,7 +162,22 @@ h2 {
   -2px 1px 0 #000,
   2px -1px 0 #000,
   -2px -1px 0 #000;
-  color: rgb(255, 255, 255);
+}
+
+.card h3 a {
+  text-decoration: none;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: center;
+  margin: 0 auto;
+  color: white;
+  padding: 0 5px;
+  height: 3em;
+  border-radius: 20px;
+}
+
+.card h3 a:hover {
+  background-color: rgba(107, 107, 107, 0.658)
 }
 
 .card h1 {
@@ -217,107 +247,10 @@ h2 {
   transform: scale(1.05);
 }
 
-.navbar {
-  background-color: black;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  display: flex;
-  height: 40px;
-  align-items: flex-start !important;
-}
-
-.nav-hidden {
-  position: absolute;
-  display: none !important;
-  visibility: hidden !important;
-}
-
-.nav-logo {
-  display: flex;
-  margin: 0 auto;
-  height: 140px;
-  align-content: flex-end
-}
-
-.navbar-icons {
-  margin-left: 2rem;
-  font-size: 2rem;
-  background: none;
-}
-
-.nav-menu {
-  background-color: rgb(0, 0, 0);
-  width: 40vh;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: -100%;
-  transition: 350ms;
-}
-
-.nav-menu.active {
-  left: 0;
-  transition: 350ms;
-  z-index: 100;
-}
-
-.nav-text {
-  color:white;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-start;
-  align-items: center;
-  list-style: none;
-  height: 60px
-}
-
-.nav-text a {
-  text-decoration: none;
-  color: white;
-  font-size: 13px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  padding: 0 10px;
-  border-radius: 50px;
-}
-
-.page {
-  margin-top: 6rem;
-  margin-bottom: 3rem;
-  color: black
-}
-
-.nav-text a:hover {
-  background-color: rgba(158, 152, 152, 0.322)
-}
-
-.nav-text a:active {
-  background-color: rgba(128, 128, 128, 0.171)
-}
-
-.nav-menu-items {
-  width: 100%
-}
-
-.navbar-toggle {
-  background-color: black;
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-span {
-  margin-left: 16px
+.url {
+  color: rgb(34, 165, 34);
+  font-weight: bolder;
+  font-size: 16px;
 }
 
 li {
@@ -328,30 +261,92 @@ li {
 }
 
 .info {
-  position: absolute;
-  top: 3em;
-  overflow-y: auto !important;
   width: 80%;
+  padding-bottom: 5em
 }
 
-.user-form {
+.select-box {
+  width: 80%;
+  margin: auto
+}
+
+footer {
+  margin: 0 auto;
+  padding-top: 1em;
+  font-size: 10px;
+  width: 80%;
+  text-align: center;
+}
+
+.user-lists {
+  padding: 50px;
+}
+
+.dash-menu {
+  background-color: rgb(237, 231, 227);
   margin-top: 5em;
+  position: fixed;
+  display: flex !important;
+  flex-flow: row;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  align-items: space-between;
 }
 
+.dash-icons {
+  display: flex;
+  flex-flow: row nowrap;
+  flex: 2
+}
 
-/* .info:first-child {
-  justify-content: flex-start !important;
-  padding-top: 5em !important;
-} */
-
-/* .info p {
+.dash-text {
+  color:rgb(0, 0, 0);
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row nowrap;
   justify-content: flex-start;
-  top: 1em;
-  position: absolute;
-} */
+  align-items: center;
+  list-style: none;
+  height: 100px
+}
 
+.dash-title {
+  /* display: none; */
+  font-size: 10px;
+  text-align: center;
+}
 
-@keyframes popup {
+.dash-text a {
+  text-decoration: none;
+  justify-content: center;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  padding: 0 2px;
+  border-radius: 20px;
+}
+
+.dash-icon {
+  font-size: 25px
+}
+
+p {
+  text-align: left !important;
+  font-size: 12px;
+}
+
+.info img {
+  width: 100%;
+  height: 2%
+}
+
+/* @keyframes popup {
   0%   { transform: scale(1,1) }
   10%  { transform: scale(1.1,1.1) }
   30%  { transform: scale(.9,.9) }
@@ -359,10 +354,29 @@ li {
   57%  { transform: scale(1,1) }
   64%  { transform: scale(1,1) }
   100% { transform: scale(1,1) }
-}  
+}   */
 
 @media screen and (min-width: 40em) {
   .nav-text a {
     font-size: 16px
   }
+}
+
+@media screen and (min-width: 450px) {
+  .dash-title{
+    display: flex;
+    font-size: 12px;
+  }
+
+  .dash-text a {
+    font-size: 13px
+  }
+
+  .dash-icon {
+    font-size: 35px
+  }
+}
+
+@media screen and (min-wdith: 542px) {
+
 }
