--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   width: 100vw;
   min-height: 100vh;
-  background-image: linear-gradient(to top, rgb(255, 166, 43), rgb(137, 255, 249), rgb(137, 255, 249), rgb(137, 255, 249));
+  background-image: linear-gradient(to top, rgb(255, 166, 43), rgb(194, 255, 255),rgb(194, 255, 255), rgb(194, 255, 255));
   
 }
 
@@ -282,9 +282,10 @@ li {
 }
 
 .info {
+  display: flex;
   width: 80%;
-  padding-bottom: 5em
 }
+
 
 .select-box {
   width: 80%;
@@ -362,10 +363,9 @@ p {
   font-size: 12px;
 }
 
-.info img {
+/* .info img {
   width: 100%;
-  height: 2%
-}
+} */
 
 /* @keyframes popup {
   0%   { transform: scale(1,1) }
